fix caption mobile size

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ body {
         
         position:absolute;
         left: 12px;
-        top: 22px;
+        bottom: 22px;
         
         font-size: 16px;
         font-weight: 600;
